tests/ui/repr/invalid_repr_list_help.stderr
error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:3:8
   |
LL | #[repr(uwu)]
   |        ^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:6:8
   |
LL | #[repr(uwu = "a")]
   |        ^^^^^^^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:9:8
   |
LL | #[repr(uwu(4))]
   |        ^^^^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:14:8
   |
LL | #[repr(uwu, u8)]
   |        ^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

warning: unknown `doc` attribute `owo`
  --> $DIR/invalid_repr_list_help.rs:20:7
   |
LL | #[doc(owo)]
   |       ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
   = note: `#[warn(invalid_doc_attributes)]` on by default

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:19:8
   |
LL | #[repr(uwu)]
   |        ^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error: aborting due to 5 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0552`.
